--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kr.cyrush.academic.sra.SRAMain
+main.class=com.cyrusian.academic.sra.SRAMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
